0.0709 2020-07-10
  - BIGIN keyword is renamed to INIT because the process is just before runtime.
  - runtime internal is clenup and simplified. runtime and constant_pool structure is removed.
  - add memory_blocks_count field to SPVM_ENV
  - file name \ is replaced to /
0.0708 2020-07-06
  - SPVM don't need the following manually initialization in Perl script because SPVM is compiled at each time to call import method.
      # Don't needed the following statement
      UNITCHECK { SPVM::init() }

0.0707 2020-07-06
  - rename SPVM::Builder::Config::add_include_dirs to unshift_include_dirs
  - add SPVM::Builder::Config::push_include_dirs
  - rename SPVM::Builder::Config::add_lib_dirs to unshift_lib_dirs
  - add SPVM::Builder::Config::push_lib_dirs
  - rename SPVM::Builder::Config::use_lib to unshift_libs
  - add SPVM::Builder::Config::push_libs
  - rename SPVM::Builder::Config::add_extra_compiler_flags to append_extra_compiler_flags
  - add SPVM::Builder::Config::prepend_extra_compiler_flags
  - rename SPVM::Builder::Config::add_extra_linker_flags to append_extra_linker_flags
  - rename SPVM::Builder::Config::add_ccflags to append_ccflags
  - rename SPVM::Builder::Config::add_lddlflags to append_lddlflags
  - add SPVM::Builder::Config::prepend_extra_linker_flags
  - add SPVM::Builder::Config::prepend_ccflags
  - add SPVM::Builder::Config::prepend_lddlflags
  - add SPVM::Builder::Config::get_cccdlflags
  - add SPVM::Builder::Config::set_cccdlflags
  - add SPVM::Builder::Config::append_cccdlflags
  - add SPVM::Builder::Config::prepend_cccdlflags
  - add SPVM::Builder::Config::get_archlibexp
  - add SPVM::Builder::Config::set_archlibexp
  - add SPVM::Builder::Config::get_shrpenv
  - add SPVM::Builder::Config::set_shrpenv

0.0706 2020-06-29
  - SPVM need manually initialization in Perl script because SPVM is not compiled some environment require, do, Mojo morbo, Mojo hypnotoad, mod_perl, etc
      UNITCHECK { SPVM::init() }